--- a/src/app/movies/component/movie-item/movie-item.component.css
+++ b/src/app/movies/component/movie-item/movie-item.component.css
@@ -24,3 +24,13 @@
   display: block;
   font-size: 1em;
 }
+
+.comment {
+  padding: .75em 0;
+}
+
+.comment span {
+  font-weight: bold;
+  margin: .5em 0 1em 0;
+  display: inline-block;
+}
