--- a/src/app/movies/component/movie-item/movie-item.component.html
+++ b/src/app/movies/component/movie-item/movie-item.component.html
@@ -1,44 +1,44 @@
-<div class="card horizontal row">
+<div class="card horizontal row" *ngFor="let movie of movies">
   <div class="card-image col s3">
-    <img src="{{poster}}">
+    <img src="{{movie.poster}}">
   </div>
   <div class="card-stacked col s9">
     <div class="card-content">
       <div class="card-header">
         <div class="card-title">
-          {{title}}
-          <span class="year">({{year}})</span>
+          {{movie.title}}
+          <span class="year">({{movie.year}})</span>
         </div>
-        <span class="genre">{{genre}}</span>
+        <span class="genre">{{movie.genre}}</span>
       </div>
-      <p>{{plot}}</p>
-      <div class="comment comment--saved" *ngIf="commentSaved; else comment">
+      <p>{{movie.plot}}</p>
+      <div class="comment comment--saved" *ngIf="movie.commentSaved; else comment">
         <span>
           Comment:
         </span>
         <p>
-          This is a saved comment
+          {{movie.comment}}
         </p>
       </div>
       <ng-template class="comment" #comment>
         <div class="input-field">
           <textarea
             class="materialize-textarea"
-            [(ngModel)]="movieComment"
+            [(ngModel)]="movie.comment"
           ></textarea>
           <label>Comment</label>
-          <div class="wordcount" [ngStyle]="{color: movieComment.trim().length === 0 ? 'firebrick' : 'lightseagreen'}">
-            {{wordCount()}} words
+          <div class="wordcount" [ngStyle]="{color: movie.comment.trim().length === 0 ? 'firebrick' : 'lightseagreen'}">
+            {{wordCount(movie.comment)}} words
           </div>
         </div>
       </ng-template>
       <div class="card-action">
         <button
           class="btn-flat"
-          [disabled]="movieComment.trim().length === 0"
-          (click)="saveComment()"
+          [disabled]="movie.comment.trim().length === 0"
+          (click)="saveComment(movie.id)"
         >
-          {{commentSaved ? 'Edit' : 'Save'}} comment
+          {{movie.commentSaved ? 'Edit' : 'Save'}} comment
         </button>
       </div>
     </div>
