--- a/src/app/movies/components/movie-item/movie-item.component.html
+++ b/src/app/movies/components/movie-item/movie-item.component.html
@@ -1,4 +1,4 @@
-<div class="card horizontal row" *ngFor="let movie of movies">
+<div class="card horizontal row">
   <div class="card-image col s3">
     <img src="{{movie.poster}}">
   </div>
