--- a/src/app/movies/components/movie-item/movie-item.component.html
+++ b/src/app/movies/components/movie-item/movie-item.component.html
@@ -40,6 +40,12 @@
         >
           {{commentSaved ? 'Edit' : 'Save'}} comment
         </button>
+        <button
+          class="btn deep-orange"
+          (click)="handleDelete()"
+        >
+          Delete movie
+        </button>
       </div>
     </div>
   </div>
