--- a/src/app/movies/components/movie-list/movie-list.component.html
+++ b/src/app/movies/components/movie-list/movie-list.component.html
@@ -1,3 +1,6 @@
+<a [routerLink]="['/movies/new']" class="btn">
+  Add new
+</a>
 <div class="search input-field">
   <i class="material-icons prefix">search</i>
   <input type="text" class="validate" #searchField>
