--- a/src/app/movies/components/movie-detail/movie-detail.component.html
+++ b/src/app/movies/components/movie-detail/movie-detail.component.html
@@ -1,5 +1,46 @@
 <a [routerLink]="['/movies']" class="btn deep-orange">back</a>
-<br>
-<ng-container *ngIf="movieId">
-  Selected movieID: {{movieId}}
-</ng-container>
+
+<div class="card" *ngIf="movieModel$ | async as movieModel">
+  <div class="card-content">
+    <span class="card-title">{{ movieModel.id ? 'Edit' : 'Add' }} movie</span>
+    <form novalidate #movieForm="ngForm" (ngSubmit)="onSubmit(movieForm, movieModel)">
+
+      <div class="row">
+        <div class="col s8">
+          <div class="input-field">
+            <input type="text" class="validate" required [(ngModel)]="movieModel.title" name="title">
+            <label>Title *</label>
+            <span class="helper-text" data-error="Title required"></span>
+          </div>
+          <div class="input-field">
+            <input type="text" class="validate" required [(ngModel)]="movieModel.genre" name="genre">
+            <label>Genre *</label>
+            <span class="helper-text" data-error="Genre required"></span>
+          </div>
+          <div class="input-field">
+            <input type="text" class="validate" required [(ngModel)]="movieModel.year" name="year">
+            <label>Year *</label>
+            <span class="helper-text" data-error="Year required"></span>
+          </div>
+          <div class="input-field">
+            <input type="text" class="validate" required [(ngModel)]="movieModel.plot" name="plot">
+            <label>Plot *</label>
+            <span class="helper-text" data-error="Plot required"></span>
+          </div>
+          <div class="input-field">
+            <input type="text" class="validate" [(ngModel)]="movieModel.poster" name="poster">
+            <label>Poster source address</label>
+          </div>
+        </div>
+        <div class="col s4">
+          <img class="poster" appImageFallback *ngIf="movieModel.poster" [src]="movieModel.poster">
+        </div>
+      </div>
+      <div class="card-action">
+        <button class="btn" type="submit" [disabled]="movieForm.invalid">{{ movieModel.id ? 'Update' : 'Create' }} movie</button>
+        <a routerLink="../" class="btn deep-orange">Cancel</a>
+      </div>
+    </form>
+  </div>
+</div>
+
