--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.card {
+  width: 700px;
+  padding: .75em .25em;
+}
+
+.btn {
+  margin: 0 0.25em;
+}
+
+img {
+  width: 100%;
+}
